[project]
name = "riot_technical_test"
version = "0.1.0"
description = "My submission for the Riot technical test"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8>=7.1.2",
    "flask>=3.1.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
pythonpath = ["."]
testpaths = ["tests"]
